--- a/test/testdata/test_local_to_remote.toml
+++ b/test/testdata/test_local_to_remote.toml
@@ -1,8 +1,8 @@
-[snapshot.b]
+[snapshot.a]
 dsnapshot = "%1$s"
 span.1.nr = 5
 span.1.interval = "5 minutes"
-[snapshot.b.rsync]
+[snapshot.a.rsync]
 src = "%2$s/src"
 dst = "%2$s/dst"
 dst_addr = "localhost"
