--- a/.azure-pipelines/posix.yml
+++ b/.azure-pipelines/posix.yml
@@ -17,5 +17,5 @@ steps:
   displayName: Package git repo
 - script: |
     set -ex
-    docker image build -f .azure-pipelines/Dockerfile -t dsnapshot-image-ci --build-arg DMD_VERSION=${DMD_VERSION} .
+    docker image build -f .azure-pipelines/${DOCKERFILE} -t dsnapshot-image-ci --build-arg DMD_VERSION=${DMD_VERSION} .
   displayName: Run test
